[package]
name = "pyth-keeper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pyth price feed keeper for EVM chains"
readme = "README.md"
keywords = ["defi", "pyth", "oracle", "evm", "crypto"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
alloy = { version = "0.6", features = ["full", "node-bindings", "signer-local"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
hex = "0.4"
serde_json = "1.0"
